# blog-api-rest

./: .bandit  .coveragerc  .dockerignore  .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Makefile  README.rst  bitbucket-pipelines.yml  local.yml  manage.py  production.yml  pyproject.toml  setup.cfg  uwsgi.ini
.envs/.local/: .django  .postgres
apps/: utils.py
apps/blogs/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/blogs/migrations/: 0001_initial.py  0002_alter_comment_blog.py  0003_tag_alter_comment_author_blog_tags.py  0004_remove_blog_body_blog_datetime.py
apps/contrib/sites/migrations/: 0001_initial.py  0002_alter_domain_unique.py  0003_set_site_domain_and_name.py  0004_alter_site_options.py
config/: api_router.py  celery.py  storage_backends.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
etc/: Dockerfile
etc/nginx/: Dockerfile
etc/nginx/conf.d/: default.conf
etc/nginx/templates/: backend.conf.template
requirements/: aws.txt  base.txt  local.txt  production.txt
tests/: test_api.py  test_models.py
