# setup.cfg


[mypy]
python_version = 3.9
files = apps
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = True
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
warn_no_return = True
plugins = mypy_django_plugin.main

[mypy-apps.*.migrations.*]
ignore_errors = True

[mypy.plugins.django-stubs]
django_settings_module = config.settings.local

[mypy-apps.*.tests.*]
ignore_errors = True

[flake8]
max-line-length = 120
select = B,C,E,F,W,T4


[metadata]
python_requires = 3.9


[coverage:run]
source = apps
omit =
    */__init__.py
    */apps.py
    */migrations/*
    */tests/*

[coverage:report]
omit =
    */__init__.py
    */apps.py
    */migrations/*
    */tests/*
exclude_lines =
    pragma: no cover


[bandit]
tests = B101,B102,B103,B104,B105,B106,B107,B108,B110,B112,B201,B301,B302,B303,B304,B305,B306,B307,B308,B309,B310,B311,B312,B313,B314,B315,B316,B317,B318,B319,B320,B321,B322,B323,B324,B325,B401,B402,B403,B404,B405,B406,B407,B408,B409,B410,B411,B412,B413,B501,B502,B503,B504,B505,B506,B507,B601,B602,B603,B604,B605,B606,B607,B608,B609,B610,B611,B701,B702,B703
